# ydj-music-studio

./: .gitignore  GEMINI.md  PLANNING.md  PROJECT-LOCAL-CONTEXT.md  README.md  requirements.txt  run-mixer.sh  run-resolver.sh  run-tagger.sh
.claude/commands/: fill-missing-genres-years.md  resolve-inconsistencies.md
common/: README.md  apple_music.py  genres.json  load_from_music_app.py
docs/: karaoke-video-processing.md
downloads/: CLAUDE.md  README.md  convert_mkv_to_mp4.sh  convert_opus_to_aac.sh  process_mkv.sh  reencode_all_mkv.sh  reencode_mkv_to_mp4.sh  rename_youtube.py
karaoke-processing/: karaoke-process  karaoke-process-v2  karaoke-process.md
karaoke-processing/karaoke-process-gui/: Info.plist  Package.swift  build.sh
library-management/: CLAUDE.md  README.md  batch_update_log_20260213_183550.json  batch_update_no_copyright.py  check_sources.py  cleanup.py  interactive_tagger.py  rename_music_file.py  research_tracks.py  resolve_inconsistencies.py  resolve_tagger.py  tag_tracks.py  test_update_hymn.py  test_update_hymn_genre.py  update_year.py  year_update_backup_20260213_180643.json  year_update_backup_20260213_180801.json  year_update_backup_20260213_180845.json  year_update_log_20260213_180649.json
library-management/sources/: __init__.py  duplicates.py  (+2 more)
mixer/: CLAUDE.md  DOE-ANNEALING-PARAMS.md  HELD-KARP-PLAN.md  OPTIMIZER-PLAN.md  README.md  camelot.py  create_key_playlists.py  doe_temperature_results.csv  mixer.py
src/ydj_mixer_engine/: Cargo.toml  pyproject.toml
src/ydj_mixer_engine/src/: annealing.rs  cost.rs  held_karp.rs  lib.rs
(+21 files in other folders)
